--- a/nick_derobertis_site/header/component.html
+++ b/nick_derobertis_site/header/component.html
@@ -10,10 +10,9 @@
                 {{ embed(button, css_classes=['btn', 'btn-primary']) }}
               {% endfor %}
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
           </div>
+          <a href="https://github.com/nickderobertis">
+            <i class="fab fa-github float-right fa-lg"></i>
+          </a>
         </nav>
       </header>
