Add link to software page on story page using new event element

--- a/nick_derobertis_site/story_page/component.html
+++ b/nick_derobertis_site/story_page/component.html
@@ -1,22 +1,22 @@
 <div class="inner cover">
     <h1 class="cover-heading">Optimizing Life</h1>
-    <p class="lead">
+    <div class="lead p">
         I was born and raised in Virginia and from an early age I realized
         I only had limited time on this planet. Since then I have sought
         every day to maximize my impact on the world and get the most
         enjoyment out of life.
-    </p>
-    <p class="lead">
+    </div>
+    <div class="lead p">
         I am a strong believer in continuous learning and innovation.
         When taking on a project, I always try to learn something new and
         usually develop some tools along the way. In trying to maximize my
-        impact, I have open-sourced many of these tools [INSERT LINK HERE].
-    </p>
-    <p class="lead">
+        impact, I have open-sourced {{ embed(software_link) }}
+    </div>
+    <div class="lead p">
         I spend most of my time researching finance topics, teaching,
         and building these tools, but when I get some extra time I love
         to work with my hands and experience the outdoors. I have been
         maintaining our family's vehicles since 2009 and take any chance
         I can get to go hiking or camping.
-    </p>
+    </div>
 </div>
