Use primary button in header instead of panel button

--- a/nick_derobertis_site/header/component.html
+++ b/nick_derobertis_site/header/component.html
@@ -7,7 +7,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
               {% for button in page_buttons %}
-                {{ embed(button, css_classes=['btn', 'btn-primary']) }}
+                {{ embed(button) }}
               {% endfor %}
             </ul>
           </div>
