Build out software page components, layout. Needs actual content

--- a/nick_derobertis_site/software_page/component.html
+++ b/nick_derobertis_site/software_page/component.html
@@ -1,1 +1,12 @@
-<p>SoftwarePageComponent works!</p>
+{{ embed(model.banner) }}
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        {% for card in model.cards %}
+          {{ embed(card, css_classes=['col-md-4', 'pl-3', 'pr-3']) }}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
