Get software page fully working

--- a/nick_derobertis_site/software_page/component.html
+++ b/nick_derobertis_site/software_page/component.html
@@ -5,7 +5,7 @@
 
       <div class="row">
         {% for card in model.cards %}
-          {{ embed(card, css_classes=['col-md-4', 'pl-3', 'pr-3']) }}
+          {{ embed(card, css_classes=['col-lg-4', 'pl-3', 'pr-3']) }}
         {% endfor %}
       </div>
     </div>
