--- a/nick_derobertis_site/software_page/software_card/component.html
+++ b/nick_derobertis_site/software_page/software_card/component.html
@@ -1,28 +1,44 @@
-<div class="card mb-4 shadow-sm">
-  <img src="{{ model.image_src }}" class="card-img-top software-card-img">
-<div class="card-body">
-    <h5>
-        {{ model.header_text }}
-    </h5>
+<div class="card software-card mb-4 shadow">
+    <div class="software-card-header-wrapper">
+        {% if model.image_src %}
+            <img src="{{ model.image_src }}" class="card-img-top software-card-img">
+        {% else %}
+            <i class="software-card-img software-card-img-placeholder fas fa-microchip text-secondary text-center" aria-hidden="true"></i>
+        {% endif %}
+        <div class="software-card-header-text-wrapper">
+            <h6>
+            {{ model.small_header_text }}
+            </h6>
+            <h5>
+            {{ model.header_text }}
+            </h5>
+        </div>
+    </div>
+<div class="card-body d-inline-flex flex-column justify-content-between">
+
   <p class="card-text">
       {{ model.body_text }}
   </p>
   <div class="d-flex flex-wrap justify-content-between align-items-center">
     <div class="btn-group">
-      <a
-          href="{{ model.github_url }}"
-          class="btn btn-sm btn-outline-secondary software-card-github-button d-flex justify-content-between align-items-center"
-      >
-          <i class="fab fa-github fa-lg" aria-hidden="true"></i>
-          <div>Github</div>
-      </a>
-      <a
-          href="{{ model.docs_url }}"
-          class="btn btn-sm btn-outline-secondary software-card-docs-button d-flex justify-content-between align-items-center"
-      >
-          <i class="fas fa-book fa-lg" aria-hidden="true"></i>
-          <div>Docs</div>
-      </a>
+        {% if model.github_url %}
+          <a
+              href="{{ model.github_url }}"
+              class="btn btn-sm btn-outline-secondary software-card-github-button d-flex justify-content-between align-items-center"
+          >
+              <i class="fab fa-github fa-lg" aria-hidden="true"></i>
+              <div>Github</div>
+          </a>
+        {% endif %}
+        {% if model.docs_url %}
+          <a
+              href="{{ model.docs_url }}"
+              class="btn btn-sm btn-outline-secondary software-card-docs-button d-flex justify-content-between align-items-center"
+          >
+              <i class="fas fa-book fa-lg" aria-hidden="true"></i>
+              <div>Docs</div>
+          </a>
+        {% endif %}
     </div>
     <small class="text-muted">{{ model.accent_text }}</small>
   </div>
