--- a/nick_derobertis_site/header/component.html
+++ b/nick_derobertis_site/header/component.html
@@ -1,18 +1,21 @@
 <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#">Nick DeRobertis, Ph.D.</a>
+          {{ embed(logo, css_classes=['navbar-brand', 'width-unset']) }}
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-              {% for button in page_buttons %}
-                {{ embed(button) }}
-              {% endfor %}
+              <div class="d-contents d-md-block">
+                {% for button in page_buttons %}
+                  {{ embed(button) }}
+                {% endfor %}
+              </div>
+              <a href="https://github.com/nickderobertis" class="nav-icon">
+                <i class="fab fa-github fa-lg"></i>
+              </a>
             </ul>
           </div>
-          <a href="https://github.com/nickderobertis">
-            <i class="fab fa-github float-right fa-lg"></i>
-          </a>
+
         </nav>
       </header>
