Add placeholder image to software banner and restructure for better responsiveness

--- a/nick_derobertis_site/software_page/software_banner/component.html
+++ b/nick_derobertis_site/software_page/software_banner/component.html
@@ -1,4 +1,5 @@
-<section class="jumbotron text-center">
+<section class="software-banner text-center d-flex flex-column justify-content-center">
+    <img src="{{ model.image_src }}">
     <div class="container">
       <h1>{{ model.header_text }}</h1>
       <p class="lead text-muted">
