--- a/nick_derobertis_site/research_page/research_project_pane/component.html
+++ b/nick_derobertis_site/research_page/research_project_pane/component.html
@@ -1,9 +1,12 @@
 <div class="row research-pane{% if is_reversed %} flex-row-reverse{% endif %}">
     <div class="col-md-7 research-header-description-container d-flex flex-column justify-content-center">
-      <h2 class="featurette-heading research-heading">{{ model.title }}</h2>
+      <h2 class="research-pane-heading">{{ model.title }}</h2>
+      {% if model.co_authors_str %}
+        <h6>With {{ model.co_authors_str }}</h6>
+      {% endif %}
       <p class="lead">{{ model.description }}</p>
     </div>
-    <div class="col-md-5 d-flex flex-wrap">
+    <div class="col-md-5 d-flex flex-wrap align-content-center justify-content-center">
       {% for category in model.categories %}
         {{ embed(category, css_classes=['width-unset']) }}
       {% endfor %}
