--- a/nick_derobertis_site/research_page/research_banner/component.html
+++ b/nick_derobertis_site/research_page/research_banner/component.html
@@ -1,8 +1,8 @@
 <section class="research-banner text-center d-flex flex-column justify-content-center">
     <img src="{{ model.image_src }}">
-    <div class="container">
+    <div class="container research-banner-content-container">
       <h1>{{ model.header_text }}</h1>
-      <p class="lead text-muted">
+      <p class="lead">
           {{ model.sub_text }}
       </p>
       <p>
