--- a/nick_derobertis_site/software_page/software_card/component.html
+++ b/nick_derobertis_site/software_page/software_card/component.html
@@ -3,7 +3,7 @@
         {% if model.image_src %}
             <img src="{{ model.image_src }}" class="card-img-top software-card-img">
         {% else %}
-            <i class="software-card-img software-card-img-placeholder fas fa-microchip text-secondary text-center" aria-hidden="true"></i>
+            <i class="software-card-img software-card-img-placeholder {{ model.fa_class_str }} text-secondary text-center" aria-hidden="true"></i>
         {% endif %}
         <div class="software-card-header-text-wrapper">
             <h6>
