--- a/nick_derobertis_site/courses_page/course_pane/component.html
+++ b/nick_derobertis_site/courses_page/course_pane/component.html
@@ -8,7 +8,7 @@
         <p class="course-overview-description lead">{{ model.description }}</p>
         <div class="course-periods-taught-container d-flex flex-wrap justify-content-center">
           {% for period in model.periods_taught %}
-            <span class="badge badge-pill badge-primary">{{ period }}</span>
+            <span class="badge badge-pill badge-primary no-color">{{ period }}</span>
           {% endfor %}
         </div>
         <div class="course-logos-container d-flex justify-content-around">
@@ -17,7 +17,7 @@
                 <div class="course-evaluations-logo-score-container d-flex align-items-center justify-content-between">
                   <i class="fas fa-tasks fa-2x" aria-hidden="true"></i>
                   <div class="course-evaluations-score-container d-flex align-items-center">
-                    <div class="course-evaluations-score-wrapper">
+                    <div class="course-evaluations-score-wrapper no-color">
                       {{ model.evaluation_score }}
                     </div>/{{ model.evaluation_max_score }}
                   </div>
@@ -42,11 +42,11 @@
           <h3 class="courses-section-header">Topics Covered</h3>
           <div class="courses-topics-container d-flex flex-wrap justify-content-center">
             {% for main_topic, child_topics in model.topics.items() %}
-              <div class="card shadow course-topic-card">
-                <h5 class="course-topic-heading">{{ main_topic }}</h5>
-                <ol class="course-topic-container">
+              <div class="card shadow course-topic-card no-color">
+                <h5 class="course-topic-heading no-color">{{ main_topic }}</h5>
+                <ol class="course-topic-container no-color">
                   {% for child in child_topics %}
-                    <li class="course-topic-wrapper">{{ child }}</li>
+                    <li class="course-topic-wrapper no-color">{{ child }}</li>
                   {% endfor %}
                 </ol>
               </div>
@@ -62,7 +62,7 @@
           <div class="courses-software-card-container d-flex flex-wrap justify-content-center">
             {% for card in model.software %}
               <div class="courses-software-wrapper">
-                {{ embed(card) }}
+                {{ embed(card, css_classes=['no-color']) }}
               </div>
             {% endfor %}
           </div>
