Create general components for viewing PDFs, include CV button in header

--- a/nick_derobertis_site/header/component.html
+++ b/nick_derobertis_site/header/component.html
@@ -10,6 +10,7 @@
                 {% for button in page_buttons %}
                   {{ embed(button) }}
                 {% endfor %}
+                {{ embed(cv_button, css_classes=['d-contents']) }}
               </div>
               <a href="https://github.com/nickderobertis" class="nav-icon">
                 <i class="fab fa-github fa-lg"></i>
