Add actual CV button to research page

--- a/nick_derobertis_site/research_page/research_banner/component.html
+++ b/nick_derobertis_site/research_page/research_banner/component.html
@@ -6,7 +6,7 @@
           {{ model.sub_text }}
       </p>
       <p>
-        <a href="#" class="btn btn-primary my-2">View CV</a>
+        {{ embed(cv_button) }}
       </p>
     </div>
   </section>
