--- a/nick_derobertis_site/research_page/component.html
+++ b/nick_derobertis_site/research_page/component.html
@@ -1,11 +1,13 @@
-{{ embed(model.banner) }}
+<div class="page-container">
+  {{ embed(model.banner) }}
 
-<div class="research-pane-container">
-  {% for pane in model.panes %}
-    {% if loop.index0 % 2 == 0 %}
-      {{ embed(pane) }}
-    {% else %}
-      {{ embed(pane, css_classes=['research-pane-offset']) }}
-    {% endif %}
-  {% endfor %}
+  <div class="research-pane-container">
+    {% for pane in model.panes %}
+      {% if loop.index0 % 2 == 0 %}
+        {{ embed(pane) }}
+      {% else %}
+        {{ embed(pane, css_classes=['research-pane-offset']) }}
+      {% endif %}
+    {% endfor %}
+  </div>
 </div>
