--- a/nick_derobertis_site/software_page/software_banner/component.html
+++ b/nick_derobertis_site/software_page/software_banner/component.html
@@ -6,7 +6,7 @@
           {{ model.sub_text }}
       </p>
       <p>
-        <a href="https://github.com/nickderobertis" class="btn btn-primary my-2">View on Github</a>
+        <a href="https://github.com/nickderobertis" class="btn btn-primary border border-primary my-2">View on Github</a>
       </p>
     </div>
   </section>
