Add background color to software page

--- a/nick_derobertis_site/software_page/component.html
+++ b/nick_derobertis_site/software_page/component.html
@@ -1,6 +1,6 @@
 {{ embed(model.banner) }}
 
-  <div class="album py-5 bg-light">
+  <div class="album py-5 bg-background">
     <div class="container">
 
       <div class="row">
