Another rework on story page to make it less busy and have better spacing

--- a/nick_derobertis_site/story_page/component.html
+++ b/nick_derobertis_site/story_page/component.html
@@ -1,11 +1,8 @@
 <div class="story-page-container">
   <img class="inner cover story-cover" src="{{ model.image_src }}">
   <div class="container story-page-content-container">
-    <h1 class="cover-heading">Optimizing Life</h1>
+    <h1 class="cover-heading text-center">Optimizing Life</h1>
     <h3 class="cover-heading">
-      <span class="story-header-logo-wrapper">
-        <i class="fas fa-baby"></i>
-      </span>
       Early Days
     </h3>
     <div class="lead p">
@@ -15,16 +12,13 @@
       enjoyment out of life.
     </div>
     <h3 class="cover-heading">
-      <span class="story-header-logo-wrapper">
-        <i class="fas fa-brain"></i>
-      </span>
       Philisophy
     </h3>
     <h4 class="cover-heading">
+      Continuous Learning, Innovation, and Open Collaboration
       <span class="story-header-logo-wrapper">
         <i class="far fa-lightbulb"></i>
       </span>
-      Continuous Learning, Innovation, and Open Collaboration
     </h4>
     <div class="lead p">
       When taking on a project, I always try to learn something new and
@@ -37,10 +31,10 @@
       society will be much better off as a whole.
     </div>
     <h4 class="cover-heading">
+      Reproducible Research
       <span class="story-header-logo-wrapper">
         <i class="fas fa-recycle"></i>
       </span>
-      Reproducible Research
     </h4>
     <div class="lead p">
       Another reason for my focus on software and automation is
@@ -48,11 +42,11 @@
       finance if our research studies were consistently open
       and reproducible.
     </div>
-    <h5 class="cover-heading">
+    <h5 class="cover-heading text-primary">
+      The Problem
       <span class="story-header-logo-wrapper">
         <i class="fas fa-exclamation-triangle"></i>
       </span>
-      The Problem
     </h5>
     <div class="lead p">
       Our studies
@@ -66,11 +60,11 @@
       level of software engineering skill currently required to
       execute this is too much of a burden for most.
     </div>
-    <h5 class="cover-heading">
+    <h5 class="cover-heading text-green">
+      The Solution
       <span class="story-header-logo-wrapper">
         <i class="far fa-check-circle"></i>
       </span>
-      The Solution
     </h5>
     <div class="lead p">
       Automation, open source software, and version control
@@ -92,9 +86,6 @@
       also completing research and teaching.
     </div>
     <h3 class="cover-heading">
-      <span class="story-header-logo-wrapper">
-        <i class="fas fa-laptop-code"></i>
-      </span>
       Day to Day
     </h3>
     <div class="lead p">
