Get start of home page hooked up with carousel

--- a/frontend/nick-derobertis-site/src/index.html
+++ b/frontend/nick-derobertis-site/src/index.html
@@ -1,13 +1,120 @@
-<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NickDerobertisSite</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
+    />
+    <link
+      rel="icon"
+      href="https://nickderobertis.github.io/derobertis-project-logo/_images/nick_derobertis_site.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="Nick DeRobertis' Personal Website" />
+    <meta name="author" content="Nick DeRobertis" />
+
+    <title>Nick DeRobertis' Personal Website</title>
+
+    <script
+      src="https://kit.fontawesome.com/79b690d2bc.js"
+      crossorigin="anonymous"
+    ></script>
+    <base href="/" />
+  </head>
+  <body>
+    <!-- goes in body -->
+    <div class="background-loader-container d-flex align-items-center">
+      <div class="loader">Loading...</div>
+    </div>
+
+    <app-root></app-root>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>'
+        );
+    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script type="text/javascript">
+      // Enables nested dropdowns
+      $("body").on("click", ".dropdown-menu a.dropdown-toggle", function (e) {
+        if (!$(this).next().hasClass("show")) {
+          $(this)
+            .parents(".dropdown-menu")
+            .first()
+            .find(".show")
+            .removeClass("show");
+        }
+        var $subMenu = $(this).next(".dropdown-menu");
+        $subMenu.toggleClass("show");
+        $(this)
+          .parents("li.nav-item.dropdown.show")
+          .on("hidden.bs.dropdown", function (e) {
+            $(".dropdown-submenu .show").removeClass("show");
+          });
+        return false;
+      });
+
+      // Enables PDF buttons
+      // See nick_derobertis_site.general.widgets.button.PDFButtonBase
+      $("body").on("click", ".has-pdf", function (e) {
+        var pdfContent = this.dataset.pdfSrc;
+        var title = `<title>${this.dataset.pdfName}</title>`;
+        var pdfIframe =
+          "<iframe width='100%' height='100%' src='" +
+          pdfContent +
+          "'></iframe>";
+        var newPage = window.open();
+        newPage.document.open();
+        newPage.document.write(title);
+        newPage.document.write(pdfIframe);
+        newPage.document.close();
+      });
+
+      // Enable scroll to skills pane
+      $("body").on("click", ".scroll-to-skills", function (e) {
+        $([document.documentElement, document.body]).animate(
+          {
+            scrollTop: $("#skills-pane").offset().top - 100,
+          },
+          1000
+        );
+      });
+
+      // On clicking a page button, go back to top of page
+      // TODO: use js callback from panel to avoid timeout hack
+      $("body").on("click", ".scroll-to-top-immediately", function (e) {
+        setTimeout(function () {
+          $([document.documentElement, document.body]).scrollTop(0);
+        }, 300);
+      });
+    </script>
+  </body>
 </html>
