--- a/frontend/nick-derobertis-site/src/index.html
+++ b/frontend/nick-derobertis-site/src/index.html
@@ -1,5 +1,20 @@
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-175183613-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-175183613-1");
+    </script>
+
     <link
       rel="stylesheet"
       type="text/css"
