Update copy for skills pane and add tooltip

--- a/frontend/nick-derobertis-site/src/index.html
+++ b/frontend/nick-derobertis-site/src/index.html
@@ -82,6 +82,11 @@
           });
         return false;
       });
+
+      // Enable tooltips
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
     </script>
   </body>
 </html>
