Add plotly dependency

--- a/frontend/nick-derobertis-site/src/index.html
+++ b/frontend/nick-derobertis-site/src/index.html
@@ -30,6 +30,7 @@
       src="https://kit.fontawesome.com/79b690d2bc.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.plot.ly/plotly-1.57.1.min.js"></script>
     <base href="/" />
   </head>
   <body>
@@ -85,8 +86,8 @@
 
       // Enable tooltips
       $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-      })
+        $('[data-toggle="tooltip"]').tooltip();
+      });
     </script>
   </body>
 </html>
